distributed-app-gen-platform-main/k8s/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lovable-main-ingress
  namespace: lovable-core
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"

spec:
  ingressClassName: nginx

  rules:

    # Frontend
    - host: "34-47-219-173.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lovable-frontend
                port:
                  number: 80

    # API Gateway
    - host: "api.34-47-219-173.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80

    # Preview
    - host: "*.previews.34-47-219-173.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lovable-me-proxy
                port:
                  number: 80
